src/components/project-content-small.module.scss
.content {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}

.text {
  width: 20rem;
  height: 100%;
  text-align: center;
  font-family: 'Heebo';
  margin-bottom: 1rem;
  p {
    direction: rtl;
  }
  h1 {
    margin-bottom: 1rem;
    direction: rtl;
    color: black;
  }
  a {
    color: black;
  }
}

.details {
  display: block !important;
}


.contact {
  width: 15rem;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  // margin-right: 3.5rem;
}

.box {
  width: 21rem;
  height: 23rem;
  background: gray;
  border: 3px solid black;
  p {
    text-align: center;
  }
  button {
    background: none;
  }
}

.header {
  width: 100%;
  height: 4rem;
  background: black;
  display: flex;
  justify-content: center;
  align-items: center;
  h2 {
    color: white;
  }
}

.form {
  text-align: center;
  input {
    width: 12rem;
    text-align: right;
    border-radius: 5px;
  }
}

.form_field {
  margin: 1rem;
}

.submit {
  margin-top: 1rem;
}


.error {
  color: red;
  font-size: 13px;
}

.map {
  height: 20rem;
  width: 100%;
}

.all {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 15px;
  margin-bottom: 15px;
}

.sales {
  width: 21rem;
  height: 6.5rem;
  margin-top: 1.5rem;
  margin-bottom: 1.5rem;
  background: lightgray;
  text-align: center;
  border: 3px solid black;
  p {
    margin: 0;
  }
}

.summary {
  direction: rtl;
  h1{
    color: black;
    font-size: 1.3em;
  }
}

.list {
  text-align: right;
  display: flex;
  flex-direction: column;
}

.modal {
  margin-left: 8rem;
  margin-bottom: 0;
  line-height: 1.5;
}

.modal_body {
position: relative;
flex: 1 1 auto;
padding: 1rem;
text-align: center;
}

